# Defender-II-PS-Vita-Port

./: README.md  apk_patch_gui.py  apk_patcher.py  defender2_vita.vpk  defender2_vita_1.01.vpk
app-c-cpp/: CMakeLists.txt  Makefile
app-c-cpp/assets/imgs_480_800/always/plist/: achv_button.plist  monster1.plist
app-c-cpp/include/engine/: abstract_game.hpp  bmp_scaler.hpp  coordinate_mapper.hpp  font_renderer.hpp  game_texture_specs.hpp  monster_entity_additions.hpp  render_utils.hpp  screen.hpp  sprite_atlas_cache.hpp  texture_cache.hpp  time_utils.hpp  touch_event.hpp
app-c-cpp/include/game/: achv_data.hpp  achv_mng.hpp  audio_manager.hpp  bow_data.hpp  game.hpp  help_overlay.hpp  item_cost.hpp  item_param.hpp  param.hpp  save.hpp  skill_data.hpp  sounds.hpp  status.hpp  type.hpp  umeng_helper.hpp  xp_data.hpp
app-c-cpp/include/scenes/: cover_scene.hpp  image_scene.hpp  loading_scene.hpp  main_game_scene.hpp  online_data_scene.hpp  research_scene.hpp  scene.hpp  shop_scene.hpp  solid_scene.hpp  stats_scene.hpp
app-c-cpp/include/scenes/research/: research_components.hpp  research_render.hpp
app-c-cpp/src/: main.cpp
app-c-cpp/src/engine/: abstract_game.cpp  bmp_scaler.cpp  coordinate_mapper.cpp  font_renderer.cpp  screen.cpp  sprite_atlas_cache.cpp  texture_cache.cpp  time_utils.cpp
app-c-cpp/src/game/: achv_mng.cpp  audio_manager.cpp  bow_data.cpp  game.cpp  help_overlay.cpp  item_cost.cpp  item_param.cpp  save.cpp  skill_data.cpp  sounds.cpp  umeng_helper.cpp  xp_data.cpp
app-c-cpp/src/scenes/: cover_scene.cpp  image_scene.cpp  loading_scene.cpp  main_game_scene.cpp  online_data_scene.cpp  research_scene.cpp  scene.cpp  shop_scene.cpp  solid_scene.cpp  stats_scene.cpp
app-c-cpp/src/scenes/maingame/: arrow.cpp  bow.cpp  formation.cpp  magic.cpp  mission.cpp  monster.cpp  panel.cpp  wall.cpp  wall_defender.cpp
app-c-cpp/src/scenes/research/: bow_button.cpp  description.cpp  equip_button.cpp  equip_zone.cpp  item_zone.cpp  research_button.cpp  research_render.cpp  update_area.cpp
